--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/golonikum/rosalind.git"
   },
+  "engines": {
+    "node": ">=6.9.0"
+  },
   "author": "Nikita Golov",
   "license": "ISC",
   "bugs": {
